fix emojis being stretched out

--- a/style.css
+++ b/style.css
@@ -34,15 +34,11 @@ body > div {
 
 /* input side */
 body > .input {
-	display: flex;
+  display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-}
-body > .input > h1,
-body > .input > .status,
-body > .input > .control {
-	margin: .5rem;
+  gap: 0.5rem;
 }
 
 body > .input > h1 {
@@ -54,9 +50,10 @@ body > .input > .control > textarea#jsn {
 	border-radius: .2rem;
   width: 50dvw;
   min-width: 15rem;
+  max-width: calc(100% - 0.1rem);
   resize: horizontal;
-  height: 100%;
 	transition: unset;
+  height: 100%;
 }
 
 
@@ -66,6 +63,7 @@ body > .input > .control {
 	flex-direction: column;
 	align-items: center;
 	gap: .5rem;
+  max-width: calc(100% - 1rem);
 }
 body > .input > .control > button#run {
 	font-size: 2rem;
@@ -74,6 +72,9 @@ body > .input > .control > button#run {
 
 
 .status {
+    flex-direction: column;
+  align-items: stretch;
+  display: flex;
 	border: 1px solid red;
 	border-radius: .2rem;
 	transition: opacity .25s ease-in;
@@ -108,7 +109,7 @@ body > .input > .control > button#run {
 .status > .body {
 	display: inline-block;
 	height: 10rem;
-	overflow-y: scroll;	
+  overflow-y: scroll;	
 	margin: .5rem;
 }
 
@@ -141,14 +142,20 @@ body > .results > button#back {
 .emojis > img {
   width: 6rem;
   aspect-ratio: 1/1;
+  image-rendering: pixelated;
+  object-fit: contain;
 }
-
+.toggle_container {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0.5rem;
+}
 .result > .emojis {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-start;
-  
-  gap: 0.2rem;
+  padding: 2rem;
+  gap: 0.5rem;
   font-size: 100%;
 }
